linera-protocol/linera-views-derive/src/snapshots/linera_views_derive__tests__test_generate_view_code_metrics_CustomContext_with_where.snap
---
source: linera-views-derive/src/lib.rs
expression: "pretty(generate_view_code(input, true).unwrap())"
---
impl<MyParam> linera_views::views::View for TestView<MyParam>
where
    CustomContext: linera_views::context::Context,
    MyParam: Send + Sync + 'static,
    RegisterView<
        CustomContext,
        usize,
    >: linera_views::views::View<Context = CustomContext>,
    CollectionView<
        CustomContext,
        usize,
        RegisterView<CustomContext, usize>,
    >: linera_views::views::View<Context = CustomContext>,
{
    const NUM_INIT_KEYS: usize = <RegisterView<
        CustomContext,
        usize,
    > as linera_views::views::View>::NUM_INIT_KEYS
        + <CollectionView<
            CustomContext,
            usize,
            RegisterView<CustomContext, usize>,
        > as linera_views::views::View>::NUM_INIT_KEYS;
    type Context = CustomContext;
    fn context(&self) -> CustomContext {
        use linera_views::context::Context as _;
        let __bytes_to_trim = 2;
        let context = self.register.context();
        context.clone_with_trimmed_key(__bytes_to_trim)
    }
    fn pre_load(
        context: &CustomContext,
    ) -> Result<Vec<Vec<u8>>, linera_views::ViewError> {
        use linera_views::context::Context as _;
        let mut keys = Vec::new();
        let __linera_reserved_index = 0u8;
        let __linera_reserved_base_key = context
            .base_key()
            .derive_tag_key(
                linera_views::views::MIN_VIEW_TAG,
                &__linera_reserved_index,
            )?;
        keys.extend(
            RegisterView::<
                CustomContext,
                usize,
            >::pre_load(&context.clone_with_base_key(__linera_reserved_base_key))?,
        );
        let __linera_reserved_index = 1u8;
        let __linera_reserved_base_key = context
            .base_key()
            .derive_tag_key(
                linera_views::views::MIN_VIEW_TAG,
                &__linera_reserved_index,
            )?;
        keys.extend(
            CollectionView::<
                CustomContext,
                usize,
                RegisterView<CustomContext, usize>,
            >::pre_load(&context.clone_with_base_key(__linera_reserved_base_key))?,
        );
        Ok(keys)
    }
    fn post_load(
        context: CustomContext,
        values: &[Option<Vec<u8>>],
    ) -> Result<Self, linera_views::ViewError> {
        use linera_views::context::Context as _;
        let mut __linera_reserved_pos = 0;
        let __linera_reserved_index = 0u8;
        let __linera_reserved_base_key = context
            .base_key()
            .derive_tag_key(
                linera_views::views::MIN_VIEW_TAG,
                &__linera_reserved_index,
            )?;
        let __linera_reserved_pos_next = __linera_reserved_pos
            + RegisterView::<CustomContext, usize>::NUM_INIT_KEYS;
        let register = RegisterView::<
            CustomContext,
            usize,
        >::post_load(
            context.clone_with_base_key(__linera_reserved_base_key),
            &values[__linera_reserved_pos..__linera_reserved_pos_next],
        )?;
        __linera_reserved_pos = __linera_reserved_pos_next;
        let __linera_reserved_index = 1u8;
        let __linera_reserved_base_key = context
            .base_key()
            .derive_tag_key(
                linera_views::views::MIN_VIEW_TAG,
                &__linera_reserved_index,
            )?;
        let __linera_reserved_pos_next = __linera_reserved_pos
            + CollectionView::<
                CustomContext,
                usize,
                RegisterView<CustomContext, usize>,
            >::NUM_INIT_KEYS;
        let collection = CollectionView::<
            CustomContext,
            usize,
            RegisterView<CustomContext, usize>,
        >::post_load(
            context.clone_with_base_key(__linera_reserved_base_key),
            &values[__linera_reserved_pos..__linera_reserved_pos_next],
        )?;
        __linera_reserved_pos = __linera_reserved_pos_next;
        Ok(Self { register, collection })
    }
    async fn load(context: CustomContext) -> Result<Self, linera_views::ViewError> {
        use linera_views::{context::Context as _, store::ReadableKeyValueStore as _};
        #[cfg(not(target_arch = "wasm32"))]
        linera_views::metrics::increment_counter(
            &linera_views::metrics::LOAD_VIEW_COUNTER,
            stringify!(TestView),
            &context.base_key().bytes,
        );
        #[cfg(not(target_arch = "wasm32"))]
        use linera_views::metrics::prometheus_util::MeasureLatency as _;
        let _latency = linera_views::metrics::LOAD_VIEW_LATENCY.measure_latency();
        if Self::NUM_INIT_KEYS == 0 {
            Self::post_load(context, &[])
        } else {
            let keys = Self::pre_load(&context)?;
            let values = context.store().read_multi_values_bytes(&keys).await?;
            Self::post_load(context, &values)
        }
    }
    fn rollback(&mut self) {
        self.register.rollback();
        self.collection.rollback();
    }
    async fn has_pending_changes(&self) -> bool {
        if self.register.has_pending_changes().await {
            return true;
        }
        if self.collection.has_pending_changes().await {
            return true;
        }
        false
    }
    fn pre_save(
        &self,
        batch: &mut linera_views::batch::Batch,
    ) -> Result<bool, linera_views::ViewError> {
        let deleted0 = self.register.pre_save(batch)?;
        let deleted1 = self.collection.pre_save(batch)?;
        Ok(deleted0 && deleted1)
    }
    fn post_save(&mut self) {
        self.register.post_save();
        self.collection.post_save();
    }
    fn clear(&mut self) {
        self.register.clear();
        self.collection.clear();
    }
}
